...
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="Degree Flowchart"
        android:textColor="@color/DarkRed"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titleTopCourses"
...
<!--        android:layout_marginRight="20dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:columnCount="4"-->
<!--        android:rowCount="4">-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/codingCourses"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="0"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_column="0"-->
<!--            android:layout_columnWeight="1"-->
...
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
    >

    <LinearLayout
        android:id="@+id/semesterContainer"
            android:layout_width="wrap_content"
            android:layout_height="584dp"
        android:orientation="vertical">
    </LinearLayout>
</HorizontalScrollView>
</RelativeLayout>
...
